tests/snapshots/ternary_false_branch__false_branch_with_and.snap
---
source: tests/ternary_false_branch.rs
assertion_line: 31
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Ternary {
                condition: Variable {
                    name: Span {
                        start: 6,
                        end: 8,
                    },
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                if_true: Some(
                    Integer {
                        value: [
                            49,
                            48,
                        ],
                        span: Span {
                            start: 11,
                            end: 13,
                        },
                    },
                ),
                if_false: Binary {
                    left: Variable {
                        name: Span {
                            start: 16,
                            end: 18,
                        },
                        span: Span {
                            start: 16,
                            end: 18,
                        },
                    },
                    op: LogicalAnd,
                    right: Variable {
                        name: Span {
                            start: 23,
                            end: 25,
                        },
                        span: Span {
                            start: 23,
                            end: 25,
                        },
                    },
                    span: Span {
                        start: 16,
                        end: 25,
                    },
                },
                span: Span {
                    start: 6,
                    end: 25,
                },
            },
            span: Span {
                start: 6,
                end: 26,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 26,
    },
}
